# PB_project

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 24804d9905e1_create_base_tables.py
backend/src/market_pipeline/: cli.py  config.py
backend/src/market_pipeline/backtest/: artifacts.py  engine.py  metrics.py  models.py
backend/src/market_pipeline/db/: models.py  session.py
backend/src/market_pipeline/marketdata/: cache_io.py  cleaning.py  cleaning_reports.py  diagnostics.py  export.py  features.py  loaders.py  queries.py  repository.py  resample.py  resampled_io.py  validate.py  validate_resampled.py
backend/src/market_pipeline/marketdata/dukascopy/: client.py  parser.py
backend/src/market_pipeline/montecarlo/: garch_fold_mc.py  validation.py
backend/src/market_pipeline/optimize/: development_region.py  final_holdout_region.py  optuna_runner.py  optuna_walkforward.py  optuna_walkforward_pareto.py  region_selection.py  scoring.py  splits.py
backend/src/market_pipeline/reporting/: pareto_report.py
backend/src/market_pipeline/strategy/: ema_macd_atr_pullback.py
infra/: docker-compose.yml
